# Changelog for Romanesco

## Romanesco 0.8.1
Released on May 5, 2016

New features:
- Add status grid for keeping track of progress per page

Fixes and improvements:
- Use snippets in JSON config files for assigning templates


## Romanesco 0.8.0
Released on May 5, 2016

New features:
- Add content blocks for arranging content in tabs
- Add Twitter content block

Fixes and improvements:
- Add changelog
- Add symlink for backgrounds.css to web context
- Flexible sidebar width on CB layouts containing a sidebar
- Assign categories to CB elements
- Fix header image and title inheritance
- Fix broken image sliders
- Update jQuery to 2.1.4 and add local fallback for CDN

ContentBlocks added or edited:
- [Field - New] Tabs (Rich Text)
- [Field - New] Tabs (Flexible Content)
- [Field - New] Twitter feed
- [Layout - Updated] Content + Sidebar
- [Layout - Updated] Sidebar + Content
- [Layout - Updated] Content + Sidebar (Nested)
- [Layout - Updated] Sidebar + Content (Nested)