@@ -1,0 +1,4 @@
+<div id="[[+legend:fbStripAsAlias]]" class="ui [[+padding]] [[+segment_type:ne=`none`:then=`segment`:else=`fieldset`]]" [[!cbGetFieldContent:contains=`"[[+legend:fbStripAsAlias]]"`:then=`class="collapse"`? &field=`[[++formblocks.cb_field_select_option_collapse_id]]` &returnAsJSON=`1`]]>
+    [[+legend:notempty=`<h3 class="ui header">[[+legend]]</h3>`]]
+    [[+main]]
+</div>
